// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`http requests > abort 1`] = `
{
  "cause": "<sample reason>",
  "msg": "[OaiPmhRequestInitError]: request to http://mock.api/?verb=Identify has failed",
}
`;

exports[`http requests > abort with timeout, after timeout 1`] = `
{
  "cause": "<sample reason>",
  "msg": "[OaiPmhRequestInitError]: request to http://mock.api/?verb=Identify has failed",
}
`;

exports[`http requests > abort with timeout, after timeout but before something todo 1`] = `
{
  "cause": "<sample reason>",
  "msg": "[OaiPmhRequestInitError]: request to http://mock.api/?verb=Identify has failed",
}
`;

exports[`http requests > abort with timeout, before timeout 1`] = `
{
  "cause": "<sample reason>",
  "msg": "[OaiPmhRequestInitError]: request to http://mock.api/?verb=Identify has failed",
}
`;

exports[`http requests > custom request fn with error 1`] = `
{
  "cause": {
    "cause": "<retracted>",
    "fullMessage": "message sample",
    "msg": "[OaiPmhRequestError]: message sample",
  },
  "msg": "[OaiPmhRequestInitError]: request to http://mock.api/?verb=Identify has failed",
}
`;

exports[`http requests > response outside of 200-299 status 1`] = `
{
  "cause": "<retracted>",
  "fullMessage": "message sample",
  "msg": "[OaiPmhRequestError]: message sample",
}
`;

exports[`http requests > response outside of 200-299 status 2`] = `
{
  "cause": "<retracted>",
  "fullMessage": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta lobortis sagittis.Mauris porttitor enim at aliquam interdum. Mauris et arcu ut augue convallis finibusut sit amet ipsum. Morbi auctor vulputate volutpat. Integer ultrices, ligula utvenenatis pretium, velit odio finibus mauris, vel eleifend felis enim non metus.",
  "msg": "[OaiPmhRequestError]: Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta lobortis sagittis.Mauris porttitor enim at aliquam interdum. Mauris et arcu ut augue convallis finibusut sit amet ipsum. Morbi auctor vulputate volutpat. Integer ultrices, ligula utven ...",
}
`;

exports[`http requests > response outside of 200-299 status 3`] = `
{
  "cause": "<retracted>",
  "fullMessage": "",
  "msg": "[OaiPmhRequestError]: request returned an error",
}
`;

exports[`http requests > timeout error 1`] = `
{
  "cause": {
    "cause": {
      "init": "<retracted>",
      "timeout": 0,
    },
    "msg": "[OaiPmhRequestTimeOutError]: request timed out after 0ms",
  },
  "msg": "[OaiPmhRequestInitError]: request to http://mock.api/?verb=Identify has failed",
}
`;
